--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,59 +1,5 @@
 {% load static %}
 
-{% comment "" %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        {% block title %}
-        Attendance Manager
-        {% endblock %}
-    </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<body>
-    <nav class="navbar navbar-expand-lg bg-warning mb-5">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="../media/check-list.png" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
-            Attendance Manager
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Developers</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    <div class="container">
-        {% block content %}
-        
-        {% endblock %}
-    </div>
-
-    {% block extra_js %}
-    {% endblock %}
-
-    <footer class="text-center bg-warning p-3 mt-5">
-      © 2024 Attendance Manager. All Rights Reserved
-    </footer>
-</body>
-</html>  {% endcomment %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -103,7 +49,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{% url "attendance_calculater" %}">
                 <img src="{% static 'check-list.png' %}" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
                 Attendance Manager
             </a>
@@ -113,13 +59,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url "attendance_calculater" %}">Home</a>
+                        <a class="nav-link {% block navHome %}{% endblock %}" href="{% url "attendance_calculater" %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url "about" %}">About</a>
+                        <a class="nav-link {% block navAbout %}{% endblock %}" href="{% url "about" %}">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url "developers" %}">Developers</a>
+                        <a class="nav-link {% block navDevelopers %}{% endblock %}" href="{% url "developers" %}">Developers</a>
                     </li>
                 </ul>
             </div>
