Name change to attendance planner

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         {% block title %}
-        Attendance Manager
+        Attendance Planner
         {% endblock %}
     </title>
     <!-- Google Fonts for better typography -->
@@ -81,7 +81,7 @@
     {% endblock %}
 
     <footer class="footer text-center p-3 mt-auto">
-        © 2025 Attendance Manager. All Rights Reserved
+        © 2025 Attendance Planner. All Rights Reserved
     </footer>
 
 </body>
