--- a/attendance_app/templates/index.html
+++ b/attendance_app/templates/index.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 
-{% block title %} Attendance Manager {% endblock %}
+{% block title %} Attendance Planner {% endblock %}
 
 {% block navHome %}active{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
-    <h1 class="display-4 text-primary text-center mb-3">Welcome to LNCT Attendance Planner!</h1>
+    <h1 class="display-4 text-primary text-center mb-3">Welcome to Attendance Planner!</h1>
     <h4 class="text-muted text-center mb-4">Calculate and Analyse your Attendance for future Holiday Planning.</h4>
 
     <form method="POST" class="form text-center" id="attendanceForm">
