--- a/attendance_app/templates/result.html
+++ b/attendance_app/templates/result.html
@@ -18,7 +18,7 @@ Attendance Analysis
             <h4>Present Classes: <span class="text-success">{{ attended_classes }}</span></h4>
         </div>
         <div class="col-md-4 col-sm-6 mb-3">
-            <h4>No. of Holidays: <span class="text-danger">{{ holiday_classes }}</span></h4>
+            <h4>No. of Future Holidays: <span class="text-danger">{{ holiday_classes }}</span></h4>
         </div>
         <div class="col-md-4 col-sm-6 mb-3">
             <h4><span class="text-primary">{{ result }}</span></h4>
